# image_compression

./: Cargo.toml
src/: encoder.rs  lib.rs  main.rs  wasm.rs
src/color/: mod.rs  rgb_to_ycbcr.rs
src/entropy/: huffman.rs  mod.rs  rle.rs  zigzag.rs
src/format/: markers.rs  mod.rs  writer.rs
src/png/: chunks.rs  encoder.rs  filter.rs  mod.rs
src/quantization/: mod.rs  tables.rs
src/transform/: dct.rs  mod.rs
