[package]
name = "jpeg_encoder"
version = "0.1.0"
edition = "2021"

[lib]
name = "jpeg_encoder"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # cdylib for WASM, rlib for native

[[bin]]
name = "jpeg_encoder_cli"
path = "src/main.rs"
required-features = ["cli"]  # Only build CLI with this feature

[features]
default = []
cli = ["image"]  # CLI feature enables image crate

[dependencies]
# Core dependencies (work in WASM)
lazy_static = "1.4"
flate2 = "1.0"
crc32fast = "1.3"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"

# Native-only dependencies (CLI)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.24", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
